# TwitchBotPython

./: .dockerignore  .gitattributes  .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
bot/: bot.py  bot_application.py  grenouille_bot.py  grenouille_calendar.py  grenouille_crs.py  grenouille_http_server.py  grenouille_irc_bot.py  heroes.db  juna_bot.py  settings.example.ini  settings.ini  twitters.json  twitters.xml
bot/migrations/: env.py
bot/migrations/versions/: 115515cf1d8c_.py
bot/models/: Points.py
bot/module/calendar/: calendar_manager.py
bot/module/commands/: command_processor.py  processor.py
bot/module/irc/: irc_bot.py
bot/module/webserver/: http_server.py
bot/module/wiki/: wiki_manager.py
common/: settings.ini
docker/: docker-compose.example.yml  docker-compose.yml
docker/froggedtv_grenouillebot/: Dockerfile
docker/froggedtv_junabot/: Dockerfile
docker/grenouillebot/: Dockerfile
migrations/: env.py
prod/: twitchbot.service
src/: Makefile  TwitchBotPython.spec  alembic.ini  app.py  main.py  requirements.txt
src/alembic/: env.py
src/bot/: bot.py  gui.py  irc_client.py  settings.example.ini  strategy.py
src/bot/alembic/: env.py
src/bot/data/: settings.py  sounds.txt
src/bot/models/: Points.py  database_client.py
src/bot/processors/: bet_processor.py  sound_processor.py
src/bot/ui/: chatter_model.py  main_window.py  qt_app.py  resources.qrc  ui_main_window.ui
src/default/: settings.ini  sqlite.db
src/twitch_bot/: bot.py  event_sub.py  oauth_callback.py
(+382 files in other folders)
